--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,6 @@ dependencies {
 
 uploadArchives {
   repositories {
-    flatDir {
-      dirs 'repos'
-    }
     mavenDeployer {
       repository(url: "file://localhost/tmp/myRepo/")
     }
@@ -44,4 +41,38 @@ publishing {
       from components.java
     }
   }
+}
+
+task createPom << {
+    pom {
+        project {
+            inceptionYear '2014'
+            groupId 'com.playlyfe.sdk'
+            artifactId 'playlyfe'
+            version version
+            packaging 'jar'
+            name 'Playlyfe Java SDK'
+            description 'This is the official OAuth 2.0 Java client SDK for the Playlyfe API. It supports the client_credentials and authorization code OAuth 2.0 flows. For a complete API Reference checkout https://dev.playlyfe.com/docs/api.html for more information.'
+            url 'https://github.com/playlyfe/playlyfe-java-sdk'
+            developers {
+              developer {
+                name 'Peter John'
+                email 'peter@playlyfe.com'
+                organization 'Playlyfe IT Solutions Pvt. Ltd'
+                organizationUrl 'http://playlyfe.com'
+              }
+            }
+            scm {
+              connection 'scm:git:git@github.com:playlyfe/playlyfe-java-sdk.git'
+              url 'git:git@github.com:playlyfe/playlyfe-java-sdk.git'
+            }
+            licenses {
+                license {
+                    name 'The Playlyfe License'
+                    url 'https://github.com/playlyfe/playlyfe-java-sdk'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.writeTo("pom.xml")
 }
